Style gaps corrected

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ h1 {
     color: #000;
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Raleway;
+    font-family: Raleway, Arial, sans-serif;
     font-size: 116px;
     font-style: normal;
     font-weight: 800;
@@ -55,9 +55,9 @@ h1::after {
     text-transform: uppercase;
     color: #000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Raleway;
+    font-family: Raleway, Arial, sans-serif;
     font-size: 116px;
-    font-style: normal;
+    font-style: bold;
     font-weight: 800;
     line-height: normal;
     letter-spacing: 4.06px;
@@ -67,12 +67,13 @@ h1:hover::before {
     content: 'На самом деле нет.\AВажнее &mdash; научиться ошибаться.';
     white-space: pre;
     color: #000;
-    font-family: Raleway;
+    font-family: Raleway, Arial, sans-serif;
     text-align: left;
     font-size: 35px;
+    letter-spacing: 0;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%;
+    line-height: 35px;
     text-transform: none;
     text-shadow: none;
     background-color: #FFF;
